[package]
authors = ["Antoni Boucher <antoni.boucher@adgear.com>"]
name = "servo-gtk"
version = "0.1.0"
[dependencies]
epoxy = "^0.0.3"
gdk = "^0.7.0"
gdk-sys = "^0.5.0"
glib = "^0.4.0"
glib-itc = "^0.3.0"
gtk = "^0.3.0"
shared_library = "^0.1.5"

[dependencies.libservo]
git = "https://github.com/servo/servo"
rev = "e4dba3abef2a4941c5a4d95d58ae0b864ad10961"

[features]
default = ["gtk/v3_16"]
[profile.release]
debug = true
