[package]
authors = ["Antoni Boucher <antoni.boucher@adgear.com>"]
name = "servo-gtk"
version = "0.1.0"

[dependencies]
epoxy = "^0.0.3"
gdk = "^0.9.0"
gdk-sys = "^0.7.0"
glib = "^0.6.0"
glib-itc = "^0.5.0"
glib-sys = "0.7.0"
gobject-sys = "0.7.0"
gtk = "^0.5.0"
gtk-sys = "0.7.0"
libc = "0.2.43"
keyboard-types = "^0.4.4"
shared_library = "^0.1.5"

[dependencies.libservo]
git = "https://github.com/servo/servo"
rev = "a2937d948818665ecda16a06fe6c8fa751d265fd"

[dependencies.gobject-gen]
git = "https://gitlab.gnome.org/federico/gnome-class"

[features]
default = ["gtk/v3_16"]

[profile.release]
debug = true
